tests/invalid/generated_binop_lshift_float_bytes/main.py
# Auto-generated invalid binop case.
def main() -> None:
    x: float = 1.0
    y: bytes = b"hello"
    z = x << y
